# otto

./: .gitattributes  LICENSE  README.md
.github/workflows/: test.yml
python/: README.md  experiments.ipynb  pyproject.toml  sample_config.yaml
python/otto/: command.py  main.py
python/otto/ai/: commander.py
python/otto/ai/sk/: sk_adapter.py  sk_config.py
python/otto/chat/: message.py
python/otto/configuration/: __init__.py  config_module.py
python/otto/context/: window.py
python/otto/logger/: logging_module.py
python/otto/msteams/: msteams_control.py
python/otto/notify/: notifier.py
python/otto/teams/: control.py
python/tests/config/: test_config.py
win_app/: .editorconfig  README.md  pyproject.toml  sample_config.yaml
win_app/otto/: logging_module.py  main.py
win_app/otto/ai/: sk.py
win_app/otto/ai/sk/: __init__.py  sk_adapter.py  sk_config.py  sk_module.py
win_app/otto/chat/: message.py
win_app/otto/configuration/: __init__.py  config.py  config_module.py
win_app/otto/context/: window.py
win_app/otto/listen/: listener.py
win_app/otto/logger/: __init__.py  logging_module.py
win_app/otto/msteams/: msteams_control.py
