[tool.poetry]
name = "otto"
version = "0.1.0"
description = ""
authors = ["Justin D. Harris <juharris@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pywinauto = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
